--- a/5. Counter/style.css
+++ b/5. Counter/style.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 #saved {
-    background-color: blue;
+    background-color: #4141f0;
     border-bottom: 5px solid #ebebeb;
     padding: 5px 0px 5px 0px;
     color: white;
